--- a/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
@@ -88,9 +88,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="HeuristicLabOperatorsPlugin.cs" />
-    <Compile Include="OperatorBase.cs" />
+    <Compile Include="Operator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StandardOperatorBase.cs" />
+    <Compile Include="StandardOperator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Collections\3.3\HeuristicLab.Collections-3.3.csproj">
