Continued work on adapting and refactoring HeuristicLab.Data according to the changes in HeuristicLab.Core (#95)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2665 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
+++ b/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
@@ -50,13 +50,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeuristicLabDataViewsPlugin.cs" />
-    <Compile Include="IntDataView.cs">
+    <Compile Include="BoolDataView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="IntDataView.Designer.cs">
-      <DependentUpon>IntDataView.cs</DependentUpon>
+    <Compile Include="BoolDataView.Designer.cs">
+      <DependentUpon>BoolDataView.cs</DependentUpon>
     </Compile>
+    <Compile Include="StringConvertibleDataView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="StringConvertibleDataView.Designer.cs">
+      <DependentUpon>StringConvertibleDataView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HeuristicLabDataViewsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
