--- a/sources/HeuristicLab.GP.Tests/HeuristicLab.GP.Tests.csproj
+++ b/sources/HeuristicLab.GP.Tests/HeuristicLab.GP.Tests.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleFunctionLibraryTest.cs" />
     <Compile Include="NetworkFunctionLibraryTest.cs" />
     <Compile Include="HL3TreeEvaluatorTest.cs" />
     <Compile Include="NetworkToFunctionTransformerTest.cs" />
