Operator architecture refactoring (#95)  * continued work on adapting and refactoring HeuristicLab.Data according to the changes in HeuristicLab.Core  * unified visual appearance of views
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2676 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
+++ b/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
@@ -102,6 +102,7 @@
     <Compile Include="BoolData.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BoolArrayData.cs" />
     <Compile Include="IStringConvertibleArrayData.cs" />
     <Compile Include="ValueTypeArrayData.cs" />
     <Compile Include="IntArrayData.cs" />
