Operator architecture refactoring (#95)  * continued work on adapting and refactoring HeuristicLab.Data according to the changes in HeuristicLab.Core
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2677 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
+++ b/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
@@ -103,7 +103,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BoolArrayData.cs" />
-    <Compile Include="IStringConvertibleArrayData.cs" />
+    <Compile Include="IntMatrixData.cs" />
+    <Compile Include="ValueTypeMatrixData.cs" />
+    <Compile Include="StringConvertibleMatrixDataDimensions.cs" />
+    <Compile Include="IStringConvertibleMatrixData.cs" />
     <Compile Include="ValueTypeArrayData.cs" />
     <Compile Include="IntArrayData.cs" />
     <Compile Include="StringData.cs">
