Implemented operators to count relative frequencies of function-symbols and variable-symbols in over the whole population. #5 (Operators to analyse structural diversity in GP populations)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2682 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.Operators/3.3/HeuristicLab.GP.Operators-3.3.csproj
+++ b/sources/HeuristicLab.GP.Operators/3.3/HeuristicLab.GP.Operators-3.3.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logging\SymbolFrequencyAnalyser.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="EqualiserController.cs" />
     <Compile Include="HeuristicLabGPOperatorsPlugin.cs" />
