--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -105,6 +105,8 @@
     <Compile Include="DeepCloneable.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Interfaces\IOperatorParameter.cs" />
+    <Compile Include="Interfaces\IScope.cs" />
+    <Compile Include="Interfaces\IVariable.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemParameter.cs" />
     <Compile Include="NamedItem.cs" />
