Implemented an enumerable to iterate through all `PluginFiles` as suggested by swagner, replaced the `Assemblies` enumerable with an AssemblyName enumerable for internal usage in the plugin infrastructure and replaced `Assembly.LoadFrom` calls with `Assembly.Load()` to prevent loading from GAC as far as possible.  #850 (PluginInfrastructure should provide a way to get assemblies associated with a plug-in)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2688 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
+++ b/sources/HeuristicLab.PluginInfrastructure/HeuristicLab.PluginInfrastructure.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Attributes\PluginFileAttribute.cs" />
     <Compile Include="BaseClasses\ApplicationBase.cs" />
     <Compile Include="BaseClasses\PluginBase.cs" />
+    <Compile Include="Interfaces\IPluginFile.cs" />
     <Compile Include="Interfaces\IApplicationManager.cs" />
     <Compile Include="Interfaces\IApplicationDescription.cs" />
     <Compile Include="Interfaces\IApplication.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="Interfaces\IPluginDescription.cs" />
     <Compile Include="InvalidPluginException.cs" />
     <Compile Include="Manager\ApplicationDescription.cs" />
+    <Compile Include="Manager\PluginFile.cs" />
     <Compile Include="Manager\PluginInfrastructureCancelEventArgs.cs" />
     <Compile Include="Manager\PluginDescription.cs" />
     <Compile Include="Manager\PluginInfrastructureEventArgs.cs" />
