--- a/sources/HeuristicLab.ExtLibs/HeuristicLab.SQLServerCompact/3.5.1.0/HeuristicLab.SQLServerCompact-3.5.1.0.csproj
+++ b/sources/HeuristicLab.ExtLibs/HeuristicLab.SQLServerCompact/3.5.1.0/HeuristicLab.SQLServerCompact-3.5.1.0.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeuristicLab.SQLServerCompact</RootNamespace>
-    <AssemblyName>HeuristicLab.SQLServerCompact-3.5.5692.0</AssemblyName>
+    <AssemblyName>HeuristicLab.SQLServerCompact-3.5.1.0</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -47,6 +47,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <DocumentationFile>bin\x64\Release\HeuristicLab.SQLServerCompact-3.5.1.0.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -63,6 +64,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <DocumentationFile>bin\x86\Release\HeuristicLab.SQLServerCompact-3.5.1.0.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
