Fixed #855 (Configuration for SQL Compact DbProviderFactory should be merged from a local app.config for the `SqlServerCompact` assembly)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2692 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ExtLibs/HeuristicLab.SQLServerCompact/3.5.1.0/HeuristicLab.SQLServerCompact-3.5.1.0.csproj
+++ b/sources/HeuristicLab.ExtLibs/HeuristicLab.SQLServerCompact/3.5.1.0/HeuristicLab.SQLServerCompact-3.5.1.0.csproj
@@ -114,6 +114,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
