Operator architecture refactoring (#95)  * finished implemented ideas which came up during yesterday's presentation of HeuristicLab.Core and related plugins
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2694 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
+++ b/sources/HeuristicLab.Data/3.3/HeuristicLab.Data-3.3.csproj
@@ -103,6 +103,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BoolArrayData.cs" />
+    <Compile Include="BoolMatrixData.cs" />
+    <Compile Include="StringMatrixData.cs" />
+    <Compile Include="StringArrayData.cs" />
+    <Compile Include="FormatPatterns.cs" />
+    <Compile Include="DoubleArrayData.cs" />
+    <Compile Include="DoubleMatrixData.cs" />
     <Compile Include="IntMatrixData.cs" />
     <Compile Include="ValueTypeMatrixData.cs" />
     <Compile Include="StringConvertibleMatrixDataDimensions.cs" />
