--- a/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
@@ -81,6 +81,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ContentView.Designer.cs">
+      <DependentUpon>ContentView.cs</DependentUpon>
+    </Compile>
     <Compile Include="DockForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,13 +106,13 @@
       <DependentUpon>DocumentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="HeuristicLabMainFormWindowsFormsPlugin.cs" />
-    <Compile Include="MainFormBase.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainFormBase.Designer.cs">
-      <DependentUpon>MainFormBase.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MenuItemBase.cs" />
+    <Compile Include="MenuItem.cs" />
     <Compile Include="MultipleDocumentMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,12 +126,12 @@
     <Compile Include="SingleDocumentMainForm.Designer.cs">
       <DependentUpon>SingleDocumentMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ToolBarItemBase.cs" />
-    <Compile Include="ViewBase.cs">
+    <Compile Include="ToolBarItem.cs" />
+    <Compile Include="View.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ViewBase.Designer.cs">
-      <DependentUpon>ViewBase.cs</DependentUpon>
+    <Compile Include="View.Designer.cs">
+      <DependentUpon>View.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewContextMenuStrip.cs">
       <SubType>Component</SubType>
@@ -164,8 +170,8 @@
       <DependentUpon>DocumentForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainFormBase.resx">
-      <DependentUpon>MainFormBase.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MultipleDocumentMainForm.resx">
       <DependentUpon>MultipleDocumentMainForm.cs</DependentUpon>
