- new method !ToolStripItemSet - Control.Show Hide method hidden with new keyword in View class (ticket #857)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2704 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
+++ b/sources/HeuristicLab.MainForm.WindowsForms/3.2/HeuristicLab.MainForm.WindowsForms-3.2.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionUserInterfaceItem.cs" />
     <Compile Include="ContentView.cs">
       <SubType>UserControl</SubType>
     </Compile>
