Worked on ContentView (#857)  * added interface IContentView  * renamed RegisterObjectEvents and DeregisterObjectEvents to RegisterContentEvents and DeregisterContentEvents  * removed EventArgs parameter from OnContentChanged  * called DeregisterContentEvents in Dispose to remove content events correctly
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2712 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
+++ b/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IContentView.cs" />
     <Compile Include="Interfaces\IActionUserInterfaceItem.cs" />
     <Compile Include="Interfaces\IPositionableUserInterfaceItem.cs" />
     <Compile Include="PositionableUserInterfaceItem.cs" />
