Activated creation of XML documentation of ANN plugin. #751 (Plugin for for data-modeling with ANN (integrated into CEDMA))
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2721 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ArtificialNeuralNetworks/3.2/HeuristicLab.ArtificialNeuralNetworks-3.2.csproj
+++ b/sources/HeuristicLab.ArtificialNeuralNetworks/3.2/HeuristicLab.ArtificialNeuralNetworks-3.2.csproj
@@ -63,6 +63,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <DocumentationFile>bin\x86\Release\HeuristicLab.ArtificialNeuralNetworks-3.2.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
