Created a specialized view for function library injectors which allows full configuration of the function library. #748 (FunctionLibraryView is empty)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2728 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP/3.3/HeuristicLab.GP-3.3.csproj
+++ b/sources/HeuristicLab.GP/3.3/HeuristicLab.GP-3.3.csproj
@@ -88,6 +88,12 @@
     <Compile Include="BaseClasses\TerminalTreeNode.cs" />
     <Compile Include="BaseClasses\Terminal.cs" />
     <Compile Include="BaseClasses\UnaryFunction.cs" />
+    <Compile Include="FunctionLibraryInjectorView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FunctionLibraryInjectorView.Designer.cs">
+      <DependentUpon>FunctionLibraryInjectorView.cs</DependentUpon>
+    </Compile>
     <Compile Include="FunctionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -137,6 +143,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FunctionLibraryInjectorView.resx">
+      <DependentUpon>FunctionLibraryInjectorView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FunctionView.resx">
       <DependentUpon>FunctionView.cs</DependentUpon>
     </EmbeddedResource>
