Operator architecture refactoring (#95)  * added extension method to pretty print type names
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2739 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CancelEventArgs.cs" />
+    <Compile Include="TypeExtensions.cs" />
     <Compile Include="ObservableList.cs" />
     <Compile Include="DoubleExtensions.cs">
       <SubType>Code</SubType>
