Operator architecture refactoring (#95) * added ItemArray and ItemArrayView
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2746 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core.Views/3.3/HeuristicLab.Core.Views-3.3.csproj
+++ b/sources/HeuristicLab.Core.Views/3.3/HeuristicLab.Core.Views-3.3.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemArrayView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ItemArrayView.Designer.cs">
+      <DependentUpon>ItemArrayView.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateParameterDialog.cs">
       <SubType>Form</SubType>
     </Compile>
